--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,4 @@
-include ':service-loader', ':service-loader-annotation', ':service-loader-compiler-app', ':service-loader-compiler', ':sample', ':sample-module', ':sample-module-2', ':sample-sdk'
+include ':service-loader', ':service-loader-annotation', ':service-loader-compiler-app', ':service-loader-compiler'
+if (hasProperty("LOCAL_BUILD_ENV")) {
+    include ':sample', ':sample-module', ':sample-module-2', ':sample-sdk'
+}
