--- a/service-loader/build.gradle
+++ b/service-loader/build.gradle
@@ -20,9 +20,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
+    implementation project(":service-loader-annotation")
     compile 'com.android.support:support-annotations:24.2.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
 
-apply from : 'http://git.sdp.nd/common-ui/common-ui-wiki/raw/master/simple-upload.gradle'
+apply from: 'http://git.sdp.nd/common-ui/common-ui-wiki/raw/master/simple-upload.gradle'
