--- a/service-loader/build.gradle
+++ b/service-loader/build.gradle
@@ -1,29 +1,10 @@
-apply plugin: 'com.android.library'
-
-android {
-    compileSdkVersion 26
-    defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-}
+apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
     implementation project(":service-loader-annotation")
     compile 'com.android.support:support-annotations:24.2.1'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
 
 apply from: 'http://git.sdp.nd/common-ui/common-ui-wiki/raw/master/simple-upload.gradle'
