--- a/sample-module-2/build.gradle
+++ b/sample-module-2/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation project(':sample-sdk')
+    api project(':sample-sdk')
     compile project(":service-loader-annotation")
     annotationProcessor project(":service-loader-compiler")
 }
