--- a/sample-module/build.gradle
+++ b/sample-module/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation project(':sample-sdk')
+    api project(':sample-sdk')
 //    implementation 'com.google.auto.service:auto-service:1.0-rc3'
 //    annotationProcessor 'com.google.auto.service:auto-service:1.0-rc3'
     compile project(":service-loader-annotation")
